syntax = "proto3";

import "Protos/Location.proto";

package signin;

message RestaurantSigninRequest {
  string Restaurantname = 1;
  string password = 2;
}

message RestaurantSigninReply {
  bool outcome = 1;
  int32 restaurantId = 2;
}

message SigninRequest {
  string usertname = 1;
  string password = 2;
}

message SigninReply {
  bool outcome = 1;
  int32 userId = 2;
}

message RestaurantInfoRequest {
	int32 restaurantId = 1;
}

message RestaurantInfoReply {
	string restaurantName = 1;
	location.Location restaurantLocation = 2;
	int32 restaurantId = 3;
}

message getRestaurantsInProximityRequest{
	location.Location userLocation = 1;
	float proximity = 2;
}

message getRestaurantsInProximityResponse{
	repeated RestaurantInfoReply restaurants = 1;
}